# Minimal-Middleware

./: .gitignore  Bindings.cpp  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  MANIFEST.in  MMW.h  PrepareForRelease.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: Publish.c  Publish.cpp  PublishRaw.cpp  Subscribe.c  Subscribe.cpp  SubscribeRaw.cpp  publish.cpp
broker/: Broker.cpp  broker.cpp
broker/includes/: BrokerPersistence.h
broker/src/: Broker.cpp  BrokerPersistence.cpp
config/: config.yml
docs/source/: conf.py  index.rst
docs/source/getting_started/: building.rst  quickstart.rst
docs/source/guides/: pub_sub.rst
includes/: CerealSerializer.h  ConfigFileParser.h  IListener.h  IMmwMessageSerializer.h  ITransport.h  JsonSerializer.h  MMW.h  MmwMessage.h  SerializerAbstraction.h  SocketAbstraction.h  TcpListener.h  TcpTransport.h  WebSocketListener.h  WebSocketTransport.h
mmw/: __init__.py
python/: Bindings.cpp  CMakeLists.txt  publish.py  pyproject.toml  setup.py  subscribe.py  test_python.py
python/app/: publish.py  subscribe.py
python/mmw/: __init__.py
python/mmw_python/: __init__.py
src/: ConfigFileParser.cpp  MMW.cpp
src/listener/: TcpListener.cpp  WebSocketListener.cpp
src/network/: SocketAbstraction.cpp
src/serialization/: CerealSerializer.cpp  JsonSerializer.cpp  SerializerAbstraction.cpp
src/transport/: TcpTransport.cpp  WebSocketTransport.cpp
