[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmw"
version = "0.1.0"
description = "Python bindings for Minimal Middleware"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["mmw"]
package-dir = { "mmw" = "mmw" }

[tool.setuptools.package-data]
mmw = ["*.so", "__init__.py"]
