[build-system]
requires = ["setuptools>=68", "wheel", "pybind11", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "mmw"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["mmw"]
package-dir = { "mmw" = "mmw" }

[tool.setuptools.package-data]
mmw = ["*.dll", "*.pyd"]
